--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "https://adventofcode.com/",
   "main": "utils.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/tripodsan/advent_of_code#readme",
   "dependencies": {
     "chalk": "5.0.0",
-    "heap-js": "2.1.6"
+    "heap-js": "2.1.6",
+    "unist-util-inspect": "7.0.0",
+    "unist-util-visit": "^4.1.0"
   }
 }
