--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/tripodsan/advent_of_code#readme",
   "dependencies": {
-    "chalk": "5.0.0",
-    "chalk-template": "0.2.0",
-    "heap-js": "2.1.6",
-    "unist-util-inspect": "7.0.0",
-    "unist-util-visit": "^4.1.0"
+    "chalk": "5.1.2",
+    "chalk-template": "0.4.0",
+    "heap-js": "2.2.0",
+    "unist-util-inspect": "7.0.1",
+    "unist-util-visit": "4.1.1"
   }
 }
