--- a/2023/cargo.toml
+++ b/2023/cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glam = "0.24.2"
 regex = "1.10.2"
 
