--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tripodsan/advent_of_code#readme",
   "dependencies": {
+    "chalk": "5.3.0",
     "chalk-template": "1.1.0",
     "heap-js": "2.3.0",
     "unist-util-inspect": "7.0.1",
